fixed mobile overflow

--- a/style.css
+++ b/style.css
@@ -19,6 +19,9 @@ body {
   right: 0;
   height: 100%;
   width: 100%;
+  /* min-width: 500px; */
+  min-height: 500px;
+
   font-size: 17px;
   line-height: 1.5;
   font-family: 'Space Mono', monospace;
@@ -27,7 +30,7 @@ body {
 .background {
   position: static;
   width: 100%;
-  height: 100vh;
+  height: 100%;
   overflow: hidden;
 }
 
@@ -38,7 +41,7 @@ body {
   top: 0;
   left: 0;
   width: 100%;
-  height: 100vh;
+  height: 100%;
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
@@ -173,6 +176,16 @@ a, a:visited {
     width: 75px;
   }
 
+  .stimuleringsfonds-inline {
+    display: block;
+  }
+
+  .stimuleringsfonds-corner {
+    display: none;
+  }
+}
+
+@media only screen and (max-width : 600px) {
   .stimuleringsfonds-inline {
     display: block;
   }
